# opendiscourse_mcp

./: .env.example  .gitignore  .python-version  README.md  TASKS.md  comprehensive_118th_report.json  gemini_memory_rules.md  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  uv.toml
.github/workflows/: coderabbitai.yml
.windsurf/rules/: govinfodata.md
config/: database.py  global_settings.py
docs/: 118th_congress_complete_status.md  118th_congress_integration_summary.md  118th_congress_maximum_ingestion_complete.md  README.md  ai_code_review.md  architecture.md  congress-api-summary.md  contributing.md  features.md  govinfo-api-summary.md  govinfo_bulk_download_process.md  installation.md  project_summary.md  python-version-guide.md  rules.md  setup.md  srs.md
docs/agents/: context_for_agents.md  functions_reference.md  usage_guide.md  walkthrough.md
opendiscourse/: package-lock.json  package.json  wrangler.jsonc
prompts/gemini/: review_all.txt
scripts/: README.md  code_review_crew.py  comprehensive_118th_verification.py  documentation_review_crew.py  download_118th_sample.py  download_complete_118th.py  download_congress_data.py  download_govinfo_data.py  find_congress_limit.py  gemini_review_crew.py  govinfo_118th_congress_downloader.py  govinfo_bulk_downloader.py  govinfo_bulk_downloader_simple.py  govinfo_bulk_downloader_standalone.py  govinfo_ingest.py  govinfo_schema.sql  ingest_all_govinfo.py  ingest_govinfo.py  ingest_govinfo_xml.py  performance_review_crew.py  process_118th_congress.py  process_existing_113th.py  process_existing_114th.py  process_existing_118th.py  quality_review_crew.py  run_comprehensive_ingestion.py  schema.sql  schema_extended.sql  security_review_crew.py  setup_bitwarden.py  setup_database.sh  test_118th_integration.py  test_bitwarden.py  test_db_connection.py  test_imports.py  test_pycongress.py  verify_crawler.py
scripts/ingestion/: __init__.py  commands.py  config.py  enums.py  ingestor.py  rate_limiter.py  xml_validator.py
scripts/ingestion/schemas/: bill.xsd  billstatus.xsd  crec.xsd  fr.xsd  plaw.xsd  statute.xsd  uslm-2.0.5.xsd
src/: index.js
src/mcp-servers/congress/: client.js  index.js
src/mcp-servers/govinfo/: client.js  index.js  package.json
tests/: .env.example  __init__.py  api-clients.test.js  conftest.py  test_ingestor_integration.py  test_rate_limiter.py  test_xml_validation.py
