[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendiscourse-mcp"
version = "1.0.0"
description = "MCP servers for accessing bulk data from govinfo.gov and congress.gov"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenDiscourse", email = "info@opendiscourse.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "@modelcontextprotocol/sdk>=0.5.0",
    "axios>=1.6.0",
    "python-dotenv>=1.0.0",
    "xml2js>=0.6.0",
    "psycopg2-binary>=2.9.0",
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
celery = ["celery>=5.3.0"]
aiofiles = ["aiofiles>=23.2.0"]
fastapi = ["fastapi>=0.104.0"]
uvicorn = ["uvicorn>=0.24.0"]

[project.urls]
Homepage = "https://github.com/cbwinslow/opendiscourse_mcp"
Repository = "https://github.com/cbwinslow/opendiscourse_mcp.git"
Issues = "https://github.com/cbwinslow/opendiscourse_mcp/issues"

[tool.setuptools.packages.find]
where = ["src", "config", "scripts"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  \.git
  \.hg
  \.mypy_cache
  \.tox
  \.venv
  _build
  buck-out
  build
  dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "config", "scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]